--- a/Axit.html
+++ b/Axit.html
@@ -7,6 +7,7 @@
   <meta name="author" content="luckyrabbit870930">
   <title>Axit Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="Axit.css">
   <script src="Axit.js"></script>
 </head>
@@ -48,10 +49,46 @@
         accumsan et viverra justo commodo.</p>
       <div class="download">Download</div>
     </div>
-
-    <div class="col_6">
-
+    <div class="col_6 main_right">
+      <div class="main_right_form">
+        <div class="main_form_row main_form_top">
+          <p>Try Your <span class="orange"> FREE </span> Trial Today</p>
+        </div>
+        <div class="main_form_row main_form_bottom">
+          <form>
+            <input type="text" class="main_form_bottom_text" placeholder="Name" id="name" name="name">
+            <input type="email" class="main_form_bottom_text" placeholder="Email" id="email" name="email">
+            <input type="password" class="main_form_bottom_text" placeholder="Password" id="password" name="password">
+            <input type="submit" class="main_form_bottom_submit" value="Get Started">
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <div class="row row_social">
+    <div class="social_left">
+      <p class="row_social_text social_bold">Social Media</p>
+      <p class="row_social_text social_normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+        Aenean euismod bibendum laoreet.</p>
+    </div>
+    <div class="social_right">
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-google"></a>
+      <a href="#" class="fa fa-pinterest"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-stumbleupon"></a>
+      <a href="#" class="fa fa-rss"></a>
+    </div>
+  </div>
+
+  <div class="row row_back_grey row_tabs">
+    
+  </div>
+
+  <div class="row row_back_white row_sublist">
+    
   </div>
 
 </body>
