--- a/Axit.html
+++ b/Axit.html
@@ -111,11 +111,11 @@
     </div>
   </section>
 
-  <section class="row row-back-white row-sublist">
-    <div class="col-6 row-sublist-left">
+  <section class="row row-back-white">
+    <div class="col-6 row-sublist">
       <img src="sublist_image.jpg" alt="Sub list" class="sublist-image">
     </div>
-    <div class="col-6 row-sublist-right">
+    <div class="col-6 row-sublist">
       <div class="align-right">
         <p class="text-bold">Sub list section<br><span class="orange-underline">_____</span></p>
         <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
@@ -139,10 +139,116 @@
   </section>
 
   <section class="row row-back-grey">
-
+    <div class="col-6 row-sublist">
+      <div class="align-left">
+        <p class="text-bold">Standard Picture Section<br><span class="orange-underline">_____</span></p>
+        <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
+          euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan<br>
+          et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis<br>
+          natoque penatibus et magnis dis parturient montes.<br>
+          <br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod<br>
+          bibendum laoreet.</p>
+      </div>
+    </div>
+    <div class="col-6 row-sublist">
+      <div class="align-right">
+        <img src="standard_image.jpg" alt="Sub list" class="sublist-image">
+      </div>
+    </div>
   </section>
 
-  <section class="row row-back-white">
+  <section class="row row-back-white-block">
+    <div class="col-12 text-center">
+      <p><br></p>
+      <p class="text-big">WHY THIS IS AWESOME<br><span class="orange-underline">_____</span></p>
+      <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="col-12 text-center sublist-column">
+      <div class="col-4 sublist-column-padding">
+        <p><br></p>
+        <img src="awesome_light.png" alt="light">
+        <p class="text-bold">Thoughtful Design</p>
+        <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
+          elit. Aenean euismod bibendum laoreet. Proin gravida 
+          dolor sit amet lacus accumsan et viverra.</p>
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <p><br></p>
+        <img src="awesome_keyboard.png" alt="keyboard">
+        <p class="text-bold">Well Crafted</p>
+        <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
+          elit. Aenean euismod bibendum laoreet. Proin gravida 
+          dolor sit amet lacus accumsan et viverra.</p>
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <p><br></p>
+        <img src="awesome_thunder.png" alt="thunder">
+        <p class="text-bold">Easy to Customize</p>
+        <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
+          elit. Aenean euismod bibendum laoreet. Proin gravida 
+          dolor sit amet lacus accumsan et viverra.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="row row-back-grey-block">
+    <div class="col-12 text-center">
+      <p><br></p>
+      <p class="text-big">PRICING OPTIONS<br><span class="orange-underline">_____</span></p>
+      <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="col-12 text-center sublist-column">
+      <div class="col-4 sublist-column-padding">
+        <ul class="awesome-ul awesome-white text-center">
+          <li class="awesome-black text-bold">Basic</li>
+          <li class="awesome-black awesome-li-bottom">
+            <p class="awesome-text-big">$0</p>
+            <p class="awesome-grey">Free for Life</p>
+          </li>
+          <li>1GB OF SPACE</li>
+          <li>10GB OF BANDWIDTH</li>
+          <li>3WEBSITES</li>
+          <li>BASIC CUSTOMIZATION</li>
+          <li>WORDPRESS INTEGRATION</li>
+          <li>EMAIL SUPPORT</li>
+        </ul>
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <ul class="awesome-ul awesome-white text-center">
+          <li class="awesome-black text-bold">Professional</li>
+          <li class="awesome-black awesome-li-bottom-none">
+            <p class="awesome-text-big">$19</p>
+            <p class="awesome-grey">Monthly Payment</p>
+          </li>
+          <li class="awesome-orange">OUR MOST POPULAR</li>
+          <li>1GB OF SPACE</li>
+          <li>10GB OF BANDWIDTH</li>
+          <li>3WEBSITES</li>
+          <li>BASIC CUSTOMIZATION</li>
+          <li>WORDPRESS INTEGRATION</li>
+          <li>EMAIL SUPPORT</li>
+        </ul>
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <ul class="awesome-ul awesome-white text-center">
+          <li class="awesome-black text-bold">Enterprise</li>
+          <li class="awesome-black awesome-li-bottom">
+            <p class="awesome-text-big">$70</p>
+            <p class="awesome-grey">Monthly Payment</p>
+          </li>
+          <li>1GB OF SPACE</li>
+          <li>10GB OF BANDWIDTH</li>
+          <li>3WEBSITES</li>
+          <li>BASIC CUSTOMIZATION</li>
+          <li>WORDPRESS INTEGRATION</li>
+          <li>EMAIL SUPPORT</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="row row-back-white-block">
     
   </section>
 
