--- a/Axit.html
+++ b/Axit.html
@@ -47,7 +47,7 @@
       <p class="main-left-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
         euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br>
         accumsan et viverra justo commodo.</p>
-      <div class="main-download">Download</div>
+       <input type="button" class="main-download" value="Download">
     </div>
     <div class="col-6 main-right">
       <div class="main-right-form">
@@ -73,13 +73,13 @@
         Aenean euismod bibendum laoreet.</p>
     </div>
     <div class="col-7">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-google"></a>
-      <a href="#" class="fa fa-pinterest"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-stumbleupon"></a>
-      <a href="#" class="fa fa-rss"></a>
+      <a href="#" class="fa fa-big fa-facebook"></a>
+      <a href="#" class="fa fa-big fa-twitter"></a>
+      <a href="#" class="fa fa-big fa-google"></a>
+      <a href="#" class="fa fa-big fa-pinterest"></a>
+      <a href="#" class="fa fa-big fa-instagram"></a>
+      <a href="#" class="fa fa-big fa-stumbleupon"></a>
+      <a href="#" class="fa fa-big fa-rss"></a>
     </div>
   </nav>
 
@@ -249,8 +249,96 @@
   </section>
 
   <section class="row row-back-white-block">
-    
+    <div class="col-12 text-center">
+      <p><br></p>
+      <p class="text-big">WHAT OUR CUSTOMERS ARE SAYING<br><span class="orange-underline">_____</span></p>
+      <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="col-12 text-center sublist-column">
+      <div class="col-4 sublist-column-padding">
+        <p class="text-normal text-customer">
+          Lorem ipsum dolor sit amet, 
+          consectetur adipisicing elit. Doloribus 
+          accusamus expedita repellat similique 
+          odio aspernatur ex, architecto eaque 
+          quo suscipit.
+        </p>
+        <img src="demo_customer.png" alt="thunder">
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <p class="text-normal text-customer">
+          Lorem ipsum dolor sit amet, 
+          consectetur adipisicing elit. Doloribus 
+          accusamus expedita repellat similique 
+          odio aspernatur ex, architecto eaque 
+          quo suscipit.
+        </p>
+        <img src="demo_customer.png" alt="thunder">
+      </div>
+      <div class="col-4 sublist-column-padding">
+        <p class="text-normal text-customer">
+          Lorem ipsum dolor sit amet, 
+          consectetur adipisicing elit. Doloribus 
+          accusamus expedita repellat similique 
+          odio aspernatur ex, architecto eaque 
+          quo suscipit.
+        </p>
+        <img src="demo_customer.png" alt="thunder">
+      </div>
+    </div>
   </section>
+
+  <section class="row row-stylish align-center">
+    <div class="col-12">
+      <p class="main-left-bold">
+        STYLISH AXURE DESIGN<br>_____
+      </p>
+      <p class="main-left-normal">
+        Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!
+      </p>
+    </div>
+    <div class="col-12">
+      <input type="button" class="main-download" value="Download">
+    </div>
+  </section>
+
+  <section class="row row-back-white row-column">
+    <div class="col-12 text-center">
+      <p><br></p>
+      <p class="text-big">CONTACT US<br><span class="orange-underline">_____</span></p>
+      <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="col-12">
+      <form class="contact-form">
+        <div class="col-6 flex-align-center">
+          <input type="text" class="main-form-bottom-text" placeholder="Name" id="contact-name" name="name">
+          <input type="email" class="main-form-bottom-text" placeholder="Email" id="contact-email" name="email">
+          <input type="text" class="main-form-bottom-text" placeholder="Subject" id="subject" name="subject">
+        </div>
+        <div class="col-6 flex-align-center flex-align-end">
+          <textarea name="message" class="main-form-bottom-text" placeholder="Message" id="message" rows="10"></textarea>
+        </div>
+        <div class="col-12 flex-align-center">
+          <input type="submit" class="contact-button" value="Send Message">
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="row row-footer align-center">
+    <div>
+      <a href="#" class="fa fa-small fa-facebook"></a>
+      <a href="#" class="fa fa-small fa-twitter"></a>
+      <a href="#" class="fa fa-small fa-google"></a>
+      <a href="#" class="fa fa-small fa-pinterest"></a>
+      <a href="#" class="fa fa-small fa-instagram"></a>
+      <a href="#" class="fa fa-small fa-stumbleupon"></a>
+      <a href="#" class="fa fa-small fa-rss"></a>
+    </div>
+    <div>
+      <p class="text-small">© 2015 Axure Themes</p>
+    </div>
+  </footer>
 
 </body>
 </html>
