Add directory structure

--- a/Axit.html
+++ b/Axit.html
@@ -8,14 +8,14 @@
   <title>Axit Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="Axit.css">
-  <script src="Axit.js"></script>
+  <link rel="stylesheet" href="css/Axit.css">
+  <script src="js/Axit.js"></script>
 </head>
 
 <body>
   <header class="row header">
     <div class="header-logo">
-      <img src="Logo_head.png" alt="Logo" height="25">
+      <img src="image/Logo_head.png" alt="Logo" height="25">
     </div>
     <div class="header-menu">
       <!-- This is for maximum width(bigger than 1024px). -->
@@ -28,7 +28,7 @@
       </ul>
       <!-- This is for medium width(smaller than 1024px). -->
       <div class="header-medium">
-        <a href="#" onclick="appearMenu()"><img src="menu_tray.png" alt="tray menu" class="dropbtn" width="30" height="30"></a>
+        <a href="#" onclick="appearMenu()"><img src="image/menu_tray.png" alt="tray menu" class="dropbtn" width="30" height="30"></a>
         <div class="dropdown-content" id="menu-tray">
           <a href="#">Features</a>
           <a href="#">About</a>
@@ -42,7 +42,7 @@
 
   <section class="row main-back">
     <div class="col-6 main-left">
-      <img src="Logo_head.png" alt="Logo">
+      <img src="image/Logo_head.png" alt="Logo">
       <p class="main-left-bold">MODERN AXURE TEMPLATE <br>FOR BEAUTIFUL PROTOTYPES<br>_____</p>
       <p class="main-left-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean<br>
         euismod bibendum laoreet. Proin gravida dolor sit amet lacus<br>
@@ -98,7 +98,7 @@
       </div>
     </div>
     <div class="col-9">
-      <img class="tabs-image" src="tabs_image.png" alt="Tabs image">
+      <img class="tabs-image" src="image/tabs_image.png" alt="Tabs image">
       <p class="text-bold tabs-article">Tabs with soft transitioning effect.</p>
       <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod<br>
         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra<br>
@@ -113,7 +113,7 @@
 
   <section class="row row-back-white">
     <div class="col-6 row-sublist">
-      <img src="sublist_image.jpg" alt="Sub list" class="sublist-image">
+      <img src="image/sublist_image.jpg" alt="Sub list" class="sublist-image">
     </div>
     <div class="col-6 row-sublist">
       <div class="align-right">
@@ -153,7 +153,7 @@
     </div>
     <div class="col-6 row-sublist">
       <div class="align-right">
-        <img src="standard_image.jpg" alt="Sub list" class="sublist-image">
+        <img src="image/standard_image.jpg" alt="Sub list" class="sublist-image">
       </div>
     </div>
   </section>
@@ -167,7 +167,7 @@
     <div class="col-12 text-center sublist-column">
       <div class="col-4 sublist-column-padding">
         <p><br></p>
-        <img src="awesome_light.png" alt="light">
+        <img src="image/awesome_light.png" alt="light">
         <p class="text-bold">Thoughtful Design</p>
         <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
           elit. Aenean euismod bibendum laoreet. Proin gravida 
@@ -175,7 +175,7 @@
       </div>
       <div class="col-4 sublist-column-padding">
         <p><br></p>
-        <img src="awesome_keyboard.png" alt="keyboard">
+        <img src="image/awesome_keyboard.png" alt="keyboard">
         <p class="text-bold">Well Crafted</p>
         <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
           elit. Aenean euismod bibendum laoreet. Proin gravida 
@@ -183,7 +183,7 @@
       </div>
       <div class="col-4 sublist-column-padding">
         <p><br></p>
-        <img src="awesome_thunder.png" alt="thunder">
+        <img src="image/awesome_thunder.png" alt="thunder">
         <p class="text-bold">Easy to Customize</p>
         <p class="text-normal">Lorem ipsum dolor sit amet, consectetur adipiscing 
           elit. Aenean euismod bibendum laoreet. Proin gravida 
@@ -263,7 +263,7 @@
           odio aspernatur ex, architecto eaque 
           quo suscipit.
         </p>
-        <img src="demo_customer.png" alt="thunder">
+        <img src="image/demo_customer.png" alt="thunder">
       </div>
       <div class="col-4 sublist-column-padding">
         <p class="text-normal text-customer">
@@ -273,7 +273,7 @@
           odio aspernatur ex, architecto eaque 
           quo suscipit.
         </p>
-        <img src="demo_customer.png" alt="thunder">
+        <img src="image/demo_customer.png" alt="thunder">
       </div>
       <div class="col-4 sublist-column-padding">
         <p class="text-normal text-customer">
@@ -283,7 +283,7 @@
           odio aspernatur ex, architecto eaque 
           quo suscipit.
         </p>
-        <img src="demo_customer.png" alt="thunder">
+        <img src="image/demo_customer.png" alt="thunder">
       </div>
     </div>
   </section>
